--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # Environment Configuration for Multimeta Car Damage Detection
 
 # YOLO Model Configuration
-YOLO_MODEL_PATH=./models/car_damage.pt
+YOLO_MODEL_PATH=models\car_damage.pt
 
 # Web Scraping Configuration
 SCRAPER_USER_AGENT=Mozilla/5.0 Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/91.0.4472.124 Safari/537.36
